added generator detailed logs